--- a/.github/workflows/multirepopush.yml
+++ b/.github/workflows/multirepopush.yml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Login to Quay Registry
-        uses: quay/login-action@v3
+        uses: docker/login-action@v3
         with:
           registry: quay.io
           username: ${{ vars.quay_user }}
