--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -21,7 +21,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.MUKTAMUTHAL }}
       
       - name: Build and export to Docker
         uses: docker/build-push-action@v6
