--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.MUKTAMUTHAL }}
       
       - name: Build and export to Docker
