--- a/.github/workflows/multirepopush.yml
+++ b/.github/workflows/multirepopush.yml
@@ -16,14 +16,14 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.MUKTAMUTHAL }}
       
       - name: Login to Quay Registry
         uses: docker/login-action@v3
         with:
           registry: quay.io
-          username: ${{ vars.quay_user }}
+          username: ${{ secrets.quay_user }}
           password: ${{ secrets.quay_token }}
       
       - name: Build and push
