--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -16,10 +16,10 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.MUKTAMUTHAL }}
       -
         name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME}}/kucl22:actions
+          tags: ${{ secrets.DOCKERHUB_USERNAME}}/kucl22:actions-runnerada
