--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -1,4 +1,4 @@
-name: learnig runner KUCL 
+name: learnig runner  
 on:
   push:
 jobs:
@@ -22,4 +22,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME}}/kucl22:actions-runnerada
+          tags: ${{ secrets.DOCKERHUB_USERNAME}}/kucl22
