--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
+
 name: Docker CI Learning - KUCL 
 on:
   push:
 jobs:
-  docker:
-    runs-on: ubuntu-latest
+  docker_1:
+    runs-on: ubuntu-latest 
+      #labels: kucl22 
+         
     steps:
       -
         name: Set up QEMU test
@@ -16,10 +19,18 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.muktamuthal }}
+          password: ${{ secrets.MUKTAMUTHAL }}
       -
         name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME}}/image:cenos
+          tags: ${{ secrets.DOCKERHUB_USERNAME}}/kucl22:actions
+  deploy:
+    needs: docker_1
+    name: deploy image
+    runs-on: 
+      labels: kucl22
+    steps:
+      - name: connect and pull
+        run: ssh ${{ secrets.S_USER }}@${{ secrets.D_HOST }} "docker run -d ${{ secrets.DOCKERHUB_USERNAME}}/kucl22:actions"
