--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
 jobs:
   docker_1:
-    runs-on: ubuntu-latest 
+    runs-on: self-hosted
       #labels: kucl22 
          
     steps:
